--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,5 @@
 <div class="flex justify-between items-center h-12  mx-5 ml-0 bg-lime-600 shadow-lg rounded-lg relative">
+    <div class="justify-start">
     <!--Boton agregar-->
     <a [routerLink]="direccion">
     <button class="bg-white shadow-md rounded-lg py-2 px-6 m-3 h-8 w-32 hover:scale-105 ease-in-out duration-300 flex items-center justify-center">
@@ -6,9 +7,21 @@
         <p class="font-bold text-md px-4"> Add</p> 
     </button>
 </a>
+</div>
+
+<div class="flex flex-row justify-end items-center">
     <!--Boton buscar-->
-    <div class="m-3 px-4 h-8 w-64 bg-white shadow-md rounded-lg hover:scale-105 ease-in-out duration-300 cursor-pointer flex items-center text-sm">
+    <div class="m-3 py-2 px-4 h-8 w-64 bg-white shadow-md rounded-lg hover:scale-105 ease-in-out duration-300 cursor-pointer flex items-center text-sm">
         <input class="p-3 px-0 h-8 w-64 outline-0 rounded-lg" type="text" placeholder="Buscar...">
             <i class="fa-solid fa-magnifying-glass"></i>       
     </div>
+
+    <!--Select de filtros-->
+    <div>
+        <select id="countries" class="text-gray-900 text-sm rounded-lg block p-2.5 dark:border-gray-200 focus:border-white-500 dark:text-black hover:scale-105 ease-in-out duration-300 cursor-pointer w-48 outline-none m-3 py-2">
+          <option selected disabled>{{selected? selected : "Categoria"}}</option>
+          <option value="US" *ngFor="let opcion of opciones">{{opcion}}</option>
+        </select>
+    </div>
+</div>
 </div>
