--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -16,17 +16,21 @@
 
   <div class="menu w-full  justify-self-auto self-center  ">
     <ul class=" p-2 space-y-10 items-center">
-      <li class=" text-lime-600 bg-slate-100 rounded-lg drop-shadow">
-        <a routerLink="">
-          <div class="flex items-center space-x-4 align-text-bottom p-2">
+      
+        <a routerLink="" routerLinkActive="text-lime-600" [routerLinkActiveOptions]="{exact: true}">
+          <li class="">
+          <div class="flex items-center space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-slate-100 
+          rounded-lg">
+            
             <img src="../../../assets/img/bar-chart.png" class="w-6 h-6">
             <span class="text-lg text-end mt-2">Dashboard</span>
           </div>
+          </li>
         </a>
-      </li>
+      
       <li class="">
-        <a routerLink="../bill-page">
-          <div class="flex items-bottom space-x-4 align-text-bottom drop-shadow p-2 hover:text-lime-600 hover:bg-slate-100 
+        <a routerLink="/bill-page" routerLinkActive="text-lime-600">
+          <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-slate-100 
           rounded-lg ">
             <img src="../../../assets/img/money.png" class="w-6 h-6">
             <span class="text-lg text-end mt-1">Bills</span>
@@ -34,8 +38,8 @@
         </a>
       </li>
       <li class="">
-        <a routerLink="../product-page">
-          <div class="flex items-bottom space-x-4 align-text-bottom drop-shadow p-2 hover:text-lime-600 hover:bg-slate-100 
+        <a routerLink="/product-page" routerLinkActive="text-lime-600">
+          <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-slate-100 
           rounded-lg ">
           <img src="../../../assets/img/box.png" class="w-6 h-6">
           <span class="text-lg text-end mt-1">Inventory</span>
@@ -43,8 +47,8 @@
         </a>
       </li>
       <li class="">
-        <a routerLink="../client-page">
-          <div class="flex items-bottom space-x-4 align-text-bottom drop-shadow p-2 hover:text-lime-600 hover:bg-slate-100 
+        <a routerLink="/client-page" routerLinkActive="" routerLinkActive="text-lime-600">
+          <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-slate-100 
           rounded-lg ">
           <img src="../../../assets/img/target.png" class="w-6 h-6">
           <span class="text-lg text-end ">Clients</span>
@@ -52,8 +56,8 @@
         </a>
       </li>
       <li class="">
-        <a href="">
-          <div class="flex items-bottom space-x-4 align-text-bottom drop-shadow p-2 hover:text-lime-600 hover:bg-slate-100 
+        <a routerLink="/." routerLinkActive="text-lime-600">
+          <div class="flex items-bottom space-x-4 align-text-bottom p-2 hover:text-lime-600 hover:bg-slate-100 
           rounded-lg ">
           <img src="../../../assets/img/cashier-machine.png" class="w-6 h-6">
           <span class="text-lg text-end ">Cashier</span>
