--- a/src/app/pages/add-bill-page/add-bill-page.component.html
+++ b/src/app/pages/add-bill-page/add-bill-page.component.html
@@ -131,10 +131,10 @@
 
             <div class="flex">
                 <div class="">
-                    <a routerLink="../bill-page">
+                    <a routerLink="../">
                     <button class=" mt-3 bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Volver</button>
                     </a>
-                    <a routerLink="../bill-page">
+                    <a routerLink="../">
                     <button class=" ml-3 mt-3 bg-red-700 hover:bg-red-500  text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Generar factura</button>
                     </a>
                 </div>
