--- a/src/app/pages/add-client-page/add-client-page.component.html
+++ b/src/app/pages/add-client-page/add-client-page.component.html
@@ -72,11 +72,11 @@
 
             <div class="flex">
                 <div class="">
-                    <a routerLink="../client-page">
+                    <a routerLink="../">
                     <button class=" mt-3 bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Volver</button>
                     </a>
                     
-                    <a routerLink="../client-page">
+                    <a routerLink="../">
                     <button type="submit" class=" ml-3 mt-3 bg-red-700 hover:bg-red-500  text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" (click)="onClienteAgregado()">Agregar cliente</button>
                     </a>
                     
