--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -1,15 +1,15 @@
-<div class="flex justify-between items-center h-12  mx-5 ml-0 bg-lime-500 shadow-xl rounded-lg relative py-8">
+<div class="flex justify-between items-center h-12  mx-5 ml-0 bg-lime-300 shadow-xl rounded-lg relative py-8">
     <div class="justify-start flex flex-row">
          <!--Boton buscar-->
     <div class="m-3 py-5 px-4 h-8 w-96 bg-white shadow-md rounded-lg cursor-pointer flex items-center text-sm">
-        <input class="p-5 px-0 h-8 w-96 outline-0 rounded-lg" type="text" placeholder="Buscar...">
-        <div class="p-4 hover:scale-110 ease-in-out duration-300">
+        <input [(ngModel)]="productText" (keyup)="onPropagarMensaje()" class="p-5 px-2 h-8 w-96 outline-0 rounded-lg" type="text"  placeholder="Buscar...">
+        <button (click)="onPropagarMensaje()" class="p-4 hover:scale-110 ease-in-out duration-300">
             <i class="fa-solid fa-magnifying-glass justify-end"></i>
-        </div>
+        </button>
     </div>
     <!--Select de filtros-->
     <div>
-        <select id="countries" class="text-gray-900 text-sm block p-2.5 dark:border-gray-200 focus:border-white-500 dark:text-black cursor-pointer w-48 outline-none m-3 shadow-md rounded-lg">
+        <select id="countries" class="text-gray-900 text-sm p-2.5 dark:border-gray-200 focus:border-white-500 dark:text-black cursor-pointer w-32 outline-none m-3 flex items-center justify-center rounded-xl shadow-lg hover:scale-105 ease-in-out duration-300">
           <option selected disabled>{{selected? selected : "Categoria"}}</option>
           <option value="US" *ngFor="let opcion of opciones">{{opcion}}</option>
         </select>
