--- a/src/app/components/search-bar/search-bar.component.html
+++ b/src/app/components/search-bar/search-bar.component.html
@@ -9,7 +9,7 @@
     </div>
     <!--Select de filtros-->
     <div>
-        <select id="countries" class="text-gray-900 text-sm p-2.5 dark:border-gray-200 focus:border-white-500 dark:text-black cursor-pointer w-32 outline-none m-3 flex items-center justify-center rounded-xl shadow-lg hover:scale-105 ease-in-out duration-300">
+        <select id="countries" class="text-gray-900 text-sm p-2.5 ml-0 dark:border-gray-200 focus:border-white-500 dark:text-black cursor-pointer w-32 outline-none m-3 flex items-center justify-center rounded-xl shadow-lg hover:scale-105 ease-in-out duration-300">
           <option selected disabled>{{selected? selected : "Categoria"}}</option>
           <option value="US" *ngFor="let opcion of opciones">{{opcion}}</option>
         </select>
