--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,7 +1,7 @@
 <div class="cursor-pointer	 min-h-screen w-44 object-contain space-y-20 bg-white flex flex-col text-gray-700 drop-shadow-lg " >
 
     <a routerLink="">
-    <div class="logo w-full h-1/4  p-3 flex space-x-4 drop-shadow-xl">
+    <div class="logo w-full h-1/4 mt-5 p-3 flex space-x-4 drop-shadow-xl">
       <img src="../../../assets/img/invoice.png" class="w-12 h-12" alt="">  
       <div class="flex flex-col text-3xl  font-light  h-full">     
         <span class="border-l-2  border-solid border-gray-700 px-1 ">
@@ -14,7 +14,7 @@
     </div>
     </a>
 
-  <div class="menu w-full justify-self-auto self-center  ">
+  <div class="menu w-full justify-self-auto self-center ">
     <ul class=" p-2 space-y-10 items-center">
       
         <a routerLink="" routerLinkActive="text-lime-600" [routerLinkActiveOptions]="{exact: true}">
