--- a/src/app/pages/add-bill-page/add-bill-page.component.html
+++ b/src/app/pages/add-bill-page/add-bill-page.component.html
@@ -1,34 +1,34 @@
 <div class="flex containeres">
     <app-side-nav></app-side-nav>
-    <div class="flex flex-col place-items-center w-3/4 text-xs relative">
+    <div class="flex flex-col place-items-center w-full text-sm relative">
         <p class="m-2 ml-5 text-3xl my-6 font-medium drop-shadow-lg justify-start">Add <span> > </span> New Bill</p>
     
-        <div class="mx-5 p-2 px-4 bg-[#fff] shadow-md shadow-lime-500/30 rounded-lg">
+        <div class="mx-5 p-2 px-4 w-5/6 h-5/6 bg-[#fff] shadow-md shadow-lime-500/30 rounded-lg items-center">
             
-            <div class="flex justify-between">
-                <div class="mt-3">
+            <div class="flex justify-between px-4">
+                <div class="mt-9">
                     <label class="font-bold mb-2" for="clienteSelect">Cliente</label>
                     <br>
-                    <select id="clienteSelect"  class="flex w-52 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
+                    <select id="clienteSelect"  class="flex w-44 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
                         <option selected>Seleccione el cliente</option>
                         <option value="Maria pineda">Maria pineda</option>
                         <option value="Juan Carlos Perez">Juan Carlos Perez</option>
                     </select>
                 </div>
-                <div class="mt-3">
+                <div class="mt-9">
                     <label class="font-bold mb-2" for="comprobante">Comprobante fiscal </label>
                     <br>
-                    <select id="comprobante" name="comprobante"  class="w-56 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
+                    <select id="comprobante" name="comprobante"  class="w-60 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
                         <option selected>Seleccione el comprobante fiscal</option>
                         <option value="Comprobante fiscal">Comprobante fiscal</option>
                         <option value="NPI">NPI</option>
                     </select>
                 </div>
 
-                    <div class="mt-3">
+                    <div class="mt-9">
                         <label class="font-bold mb-2" for="terminoDePago">Termino de pago </label>
                         <br>
-                        <select id="terminoDePago" name="terminoDePago"  class="w-52 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
+                        <select id="terminoDePago" name="terminoDePago"  class="w-60 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
                             <option selected>Seleccione el termino de pago</option>
                             <option value="Al contado">Al contado</option>
                             <option value="Credito">Credito</option>
@@ -38,19 +38,19 @@
 
                 <div class="flex justify-evenly">
 
-                    <div class="mt-3">
+                    <div class="mt-4">
                         <label class="font-bold mb-2" for="estadoDePago">Estado de pago </label>
                         <br>
-                        <select id="estadoDePago"  class="w-52 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
+                        <select id="estadoDePago"  class="w-60 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
                             <option selected>Seleccione el estado de pago</option>
                             <option value="Saldado">Saldado</option>
                             <option value="Sin saldar">Sin saldar</option>
                         </select>
                     </div>
-                    <div class="mt-3">
+                    <div class="mt-4">
                         <label class="font-bold mb-2" for="tipoDocumento">Tipo de documento </label>
                         <br>
-                        <select id="tipoDocumento"  class="w-56 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
+                        <select id="tipoDocumento"  class="w-60 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
                             <option selected>Seleccione el tipo de documento</option>
                             <option value="Comprobante fiscal">Comprobante fiscal</option>
                             <option value="NPI">NPI</option>
@@ -61,8 +61,8 @@
                     <div class="bg-lime-500 w-full h-0.5 rounded-full my-2"></div>
                     
                     </div>
-            <div class="flex">
-                <div class="mt-3">
+            <div class="flex my-4 items-center">
+                <div class="">
                     <label class="font-bold mb-2" for="productSelect">Producto</label>
                     <br>
                     <select id="productSelect"  name="productSelect" class="flex w-52 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg">
@@ -71,15 +71,15 @@
                         <option value="Producto B">Producto B</option>
                     </select>
                 </div>
-                <div class="mt-3 ml-2">
+                <div class="ml-2">
                     <label class="font-bold mb-2" for="cant">Cantidad </label>
                     <br>
                     <input type="number" id="telefono" name="telefono" placeholder="809-589-9873" class="w-16 shadow-md focus:outline-none focus:ring-1 focus:ring-sky-500 caret-sky-500 p-2 py-2 m-1 ... rounded-lg"
                     [(ngModel)]="cant">
                 </div>
-                <div class="mt-3">
-                    <button class=" flex h-8 w-8 p-2 m-4 bg-lime-500 rounded-full justify-center items-center hover:scale-105 ease-in-out duration-300">
-                        <p class="text-white font-bold text-md "><i class="fa-solid fa-plus"></i></p>
+                <div class="items-center">
+                    <button class=" flex h-9 w-9 p-2 m-4 bg-lime-500 rounded-full justify-center items-center hover:scale-105 ease-in-out duration-300">
+                        <p class="text-white font-bold text-md"><i class="fa-solid fa-plus"></i></p>
                     </button>
                 </div>
             </div>
@@ -87,9 +87,9 @@
                 <div class="bg-lime-500 w-full h-0.5 rounded-full my-2"></div>
             </div>
             <div class="flex">
-                    <table class="w-full my-3" style="text-align:justify;">
+                    <table class="w-full my-6" style="text-align:justify;">
                         <thead>
-                            <tr class="text-xs">
+                            <tr class="text-sm">
                                 <th>Articulo</th>
                                 <th>Precio unitario</th>
                                 <th>Cantidad</th>
@@ -98,7 +98,7 @@
                         </thead>     
                         
                         <tbody>
-                            <tr class="text-xs">
+                            <tr class="text-sm">
                                
                                 <td class="py-1">Producto A</td>
                                 <td class="py-1">0.00</td>
@@ -112,9 +112,9 @@
                 <div class="bg-lime-500 w-full h-0.5 rounded-full my-2"></div>
             </div>
             <div class="flex">
-                    <table class="w-full my-3" style="text-align:justify;">
+                    <table class="w-full my-6" style="text-align:justify;">
                         <thead>
-                            <tr class="text-xs">
+                            <tr class="text-sm">
                                 <th>Sub total</th>
                                 <th>Descuento</th>
                                 <th>Impuesto</th>
@@ -123,7 +123,7 @@
                         </thead>     
                         
                         <tbody>
-                            <tr class="text-xs">
+                            <tr class="text-sm">
                                
                                 <td class="py-1">0.00</td>
                                 <td class="py-1">0.00</td>
@@ -137,10 +137,10 @@
             <div class="flex">
                 <div class="">
                     <a routerLink="../">
-                    <button class=" mt-3 bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Volver</button>
+                    <button class=" mt-9 h-10 bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Volver</button>
                     </a>
                     <a routerLink="../">
-                    <button class=" ml-3 mt-3 bg-red-700 hover:bg-red-500  text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Generar factura</button>
+                    <button class="mt-9 h-10 ml-3 bg-red-700 hover:bg-red-500  text-white font-bold py-2 px-4 rounded hover:scale-105 ease-in-out duration-300" >Generar factura</button>
                     </a>
                 </div>
             </div>
