--- a/src/app/pages/add-bill-page/add-bill-page.component.scss
+++ b/src/app/pages/add-bill-page/add-bill-page.component.scss
@@ -8,12 +8,16 @@
         left: 0px;
         right: 0px;
         background-image: url(../../../assets/img/pattern-icon-13.jpg);
+        filter: blur(10px);
         background-size: cover;
         background-position: top-center;
-        opacity: 0.2;
+        opacity: 1;
     }
 }
 .spacing{
   justify-content: space-between;
   
+}
+.desenfoque{
+    filter: blur(10px);
 }
