--- a/src/app/pages/client-page/client-page.component.html
+++ b/src/app/pages/client-page/client-page.component.html
@@ -7,43 +7,65 @@
         ></app-search-bar>
         <app-client-table></app-client-table>
           <!--Modal agregar productos-->
-      <dialog #modal id="modal" class="modal h-96 w-2/5 bg-gray-100 open:flex relative flex-col items-center justify-between rounded-xl ">
-        <p class="text-xl text-center">Agregar Producto</p>
-        <form action="" method="dialog" class=" grid grid-cols-2 grid-rows-4 gap-14 h-4/6 ">
-          <div class="flex flex-col ">
-            <label for="">Id: </label>
-            <input type="number" class="rounded-lg bg-stone-200 shadow-sm" [disabled]="true">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Imagen: </label>
-            <input type="URL" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Nombre del cliente: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Categoria: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Precio de compra: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Precio de venta: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Descripcion producto: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <div class="flex flex-col ">
-            <label for="">Ganancia: </label>
-            <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
-          </div>
-          <button type="submit" class="mt-3 bg-lime-600 flex items-center justify-center h-8  p-4 rounded-xl shadow-lg ">Submit</button>
-          <button (click)="closeModal()" class="mt-3 bg-red-500 flex items-center justify-center h-8  p-4 rounded-xl shadow-lg ">Close</button>
+      <dialog #modal id="modal" class="modal w-3/5 bg-gray-100 open:flex relative flex-col items-center justify-between rounded-xl ">
+        <p class="text-2xl font-bold text-center m-9">Agregar cliente</p>
+        <form action="" method="dialog">
+            <div  class=" grid grid-cols-3 grid-rows-4 gap-6 h-4/6 ">
+
+                <div class="flex flex-col ">
+                  <label for="">Id: </label>
+                  <input type="number" class="rounded-lg bg-stone-200 shadow-sm" [disabled]="true" placeholder="CLI-39201">
+                </div>
+                <div class="flex flex-col ">
+                  <label for="">Nombre o razon social: </label>
+                  <input type="URL" class="rounded-lg bg-stone-200 shadow-sm">
+                </div>
+                <div class="flex flex-col">
+                  <label for="tipoDocumento">Select Tipo de documento: </label>
+                  <select name="tipoDocumento" id="tipoDocumento">
+                    <option value="Seleccione un documento" disabled></option>
+                    <option value="Cedula"></option>
+                    <option value="Pasaporte" ></option>
+                    <option value="Licencia" ></option>
+                  </select>
+                </div>
+                <div class="flex flex-col ">
+                  <label for="">Numero de documento: </label>
+                  <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
+                </div>
+                <div class="flex flex-col ">
+                  <label for="">Check box Comprobante fiscal: </label>
+                  <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
+                </div>
+                <div class="flex flex-col ">
+                  <label for="">Numero de comprobante fiscal: </label>
+                  <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
+                </div>
+                <div class="flex flex-col ">
+                  <label for="">Correo: </label>
+                  <input type="email" class="rounded-lg bg-stone-200 shadow-sm">
+                </div>
+                <div class="flex flex-col ">
+                  <label for="">Telefono: </label>
+                  <input type="tel" class="rounded-lg bg-stone-200 shadow-sm">
+                </div>
+                <div class="flex flex-col ">
+                  <label for="">Celular: </label>
+                  <input type="tel" class="rounded-lg bg-stone-200 shadow-sm">
+                </div>
+                <div class="flex flex-col ">
+                  <label for="">Direccion: </label>
+                  <input type="text" class="rounded-lg bg-stone-200 shadow-sm">
+                </div>
+                <div class="flex flex-col ">
+                  <label for="">Comentario: </label>
+                  <textarea class="rounded-lg bg-stone-200 shadow-md outline-none p-2"></textarea>
+                </div>
+            </div>
+            <div class="flex justify-center gap-16">
+                <button type="submit" class="mt-9 bg-lime-600 flex items-center justify-center h-12 w-1/5 p-4 rounded-xl shadow-lg hover:bg-lime-700  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300">Submit</button>
+                <button (click)="closeModal()" class="mt-9 bg-red-500 flex items-center justify-center h-12 w-1/5  p-4 rounded-xl shadow-lg hover:bg-red-600  text-white font-bold py-2 px-4 hover:scale-105 ease-in-out duration-300 ">Close</button>
+            </div>
         </form>
         <div class="mt-10 w-full flex justify-between px-16">
         </div>
